examples/test/testpolicy18114.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18114
  namespace: namespace119
spec:
  podSelector:
    matchLabels:
      key14: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value38
          key2: value32
      podSelector:
        matchLabels:
          key11: value37
          key23: value28
